Refresh resume from Yahoo

--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -18,7 +18,7 @@ type=text/css></LINK>
 <p>Ed Burns is currently a Consulting Member of the Technical Staff at
 Oracle America, Inc. At Oracle, Ed is the specification lead for
 JavaServer Faces, the standard Web Application Framework for Java EE.
-Ed contined in this role from his work at Sun Microsystems, Inc.  In
+Ed continued in this role from his work at Sun Microsystems, Inc.  In
 this role, Ed leads a team of web experts from across the industry in
 developing JavaServer Faces Technology through the Java Community
 Process and in open source. His areas of professional interests include
@@ -55,33 +55,36 @@ href="http://purl.oclc.org/NET/edburns/">&lt;http://purl.oclc.org/NET/edburns/&g
 
 <p>Ed has worked on a wide variety of client and server side web
 technologies since 1994, including NCSA Mosaic, Netscape 6, Mozilla, the
-Sun Java Plugin, Jakarta Tomcat and, most recently JavaServer Faces.  Ed
-has published three books with McGraw-Hill, JavaServerFaces: The
-Complete Reference (2006), Secrets of the Rockstar Programmers: Riding
-the IT crest (2008) and JavaServer Faces 2.0: The Complete Reference
-(2010).  To learn more about his books or projects, you can visit his
-website at &lt;http://ridingthecrest.com/&gt;.  To subscribe to an
-interest list for speaking engagements, articles, and other events, send
-an email with "subscribe" in the subject to
-&lt;subscribe@ridingthecrest.com&gt;.</p>
+Sun Java Plugin, Jakarta Tomcat and JavaServer Faces, and most recently,
+the Servlet specification.  Ed leads or co-leads the expert groups for
+Servlet and JavaServer Faces.  Ed has published four books with
+McGraw-Hill, JavaServerFaces: The Complete Reference (2006), Secrets of
+the Rockstar Programmers: Riding the IT crest (2008) JavaServer Faces
+2.0: The Complete Reference (2010) and Hudson Continuous Integration In
+Practice (2013).  To learn more about his books or projects, you can
+visit his website at &lt;http://ridingthecrest.com/&gt;.</p>
 
 <h2>Short Version with Conference Experience</h2>
 
 <p>Ed Burns is a Consulting Member of the Technical Staff at Oracle
 America, Inc. and has worked on a wide variety of client and server side
 web technologies since 1994, including NCSA Mosaic, Mozilla, the Sun
-Java Plugin, Jakarta Tomcat and, most recently JavaServer Faces. Ed is
-currently the spec lead for JavaServer Faces, a topic on which Ed
-recently co-authored a book for McGraw Hill.  Ed is an experienced
-international conference speaker, with consistently high attendence
-numbers and ratings at JavaOne, JAOO, JAX, W-JAX, No Fluff Just Stuff,
-JA-SIG, The Ajax Experience, and Java and Linux User Groups.</p>
+Java Plugin, Jakarta Tomcat and, most extensively, JavaServer Faces, on
+which he is the co-spec lead.  Ed is also the co-spec lead for the
+Servlet specification.  Ed is an experienced international conference
+speaker, with consistently high attendence numbers and ratings at
+JavaOne (Rockstar award winner 2016), Devoxx, DevNexus, JAOO, JAX,
+W-JAX, No Fluff Just Stuff, JA-SIG, The Ajax Experience, and Java and
+Linux User Groups.  He has published four books with McGraw-Hill,
+JavaServerFaces: The Complete Reference (2006), Secrets of the Rockstar
+Programmers: Riding the IT crest (2008) JavaServer Faces 2.0: The
+Complete Reference (2010) and Hudson Continuous Integration In Practice
+(2013).</p>
 
     <hr>
-    <address><a href="mailto:b_edward@bellsouth.net"></a></address>
 <!-- Created: Fri Jun 23 11:25:29 Eastern Daylight Time 2006 -->
 <!-- hhmts start -->
-Last modified: Fri Aug  6 14:21:39 PDT 2010
+Last modified: Wed Feb 08 10:51:46 EDT 2017
 <!-- hhmts end -->
   
 
