Leaving Oracle.  Joining Microsoft.

--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -25,8 +25,9 @@ type=text/css></LINK>
 
 <h2>Long Version</h2>
 
-<p>Ed Burns is currently a Consulting Member of the Technical Staff at
-Oracle America, Inc. At Oracle, Ed is the specification lead for
+<p>Ed Burns is currently Principal Architect for Java at
+Microsoft. Prior to joining Microsoft, Ed was a Consulting Member of the Technical Staff At Oracle.
+While there, Ed was the specification lead for
 JavaServer Faces, the standard Web Application Framework for Java EE.
 Ed continued in this role from his work at Sun Microsystems, Inc.  In
 this role, Ed leads a team of web experts from across the industry in
@@ -94,7 +95,7 @@ Complete Reference (2010) and Hudson Continuous Integration In Practice
     <hr>
 <!-- Created: Fri Jun 23 11:25:29 Eastern Daylight Time 2006 -->
 <!-- hhmts start -->
-Last modified: Wed Feb 08 10:51:46 EDT 2017
+Last modified: Tue Jun 04 18:09:46 EDT 2019
 <!-- hhmts end -->
   
 
