Leaving Oracle.  Joining Microsoft.

--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -25,7 +25,7 @@ type=text/css></LINK>
 
 <h2>Long Version</h2>
 
-<p>Ed Burns is currently Principal Architect for Java at
+<p>Ed Burns is currently Principal Architect on the Java Tooling and Experiences team at
 Microsoft. Prior to joining Microsoft, Ed was a Consulting Member of the Technical Staff At Oracle.
 While there, Ed was the specification lead for
 JavaServer Faces, the standard Web Application Framework for Java EE.
