--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -26,12 +26,12 @@ type=text/css></LINK>
 <h2>Long Version</h2>
 
 <p>Ed Burns is currently Principal Architect on the Java Tooling and Experiences team at
-Microsoft. Prior to joining Microsoft, Ed was a Consulting Member of the Technical Staff At Oracle.
-While there, Ed was the specification lead for
-JavaServer Faces, the standard Web Application Framework for Java EE.
-Ed continued in this role from his work at Sun Microsystems, Inc.  In
-this role, Ed leads a team of web experts from across the industry in
-developing JavaServer Faces Technology through the Java Community
+Microsoft. In this role, Ed will help make Azure the best place for Enterprise Java.  Prior to joining Microsoft, Ed was a Consulting Member of the Technical Staff At Oracle.
+While there, Ed was the specification lead or co-lead for
+JavaServer Faces, the standard Web Application Framework for Java EE, and for Servlet, the standard HTTP API for Java EE.
+Ed continued in these roles from his work at Sun Microsystems, Inc.  In
+these roles, Ed lead a team of web experts from across the industry in
+developing JavaServer Faces and Servlet Technology through the Java Community
 Process and in open source. His areas of professional interests include
 web application frameworks, AJAX, reducing complexity, test driven
 development, requirements gathering, and computer supported
@@ -49,10 +49,10 @@ Software.</p>
 
 <p>Ed is a frequent speaker at international industry conferences,
 having presented many times at Oracle's JavaOneSM conference, given
-keynote addresses at the JAX conference in Mainz, the W-JAX conference
-in Munich, Germany and the Globalcode Developer's Conference in São
+keynote addresses at Javaland, the JAX conference in Mainz, the W-JAX conference
+in Munich, Germany and the Globalcode Developer's Conference in S&atilde;o
 Paulo, Brazil, and the JSFDays conference in Vienna Austria.  In
-addition to keynotes, Ed has given technical sessions atnumerous
+addition to keynotes, Ed has given technical sessions at numerous
 international Java conferences including Javapolis, Jazoon, JAX-India,
 TheServerSide.com Java Symposium, No Fluff Just Stuff, the Ajax
 Experience, JAOO, and others, and also has spoken at many Java User
@@ -67,7 +67,7 @@ href="http://purl.oclc.org/NET/edburns/">&lt;http://purl.oclc.org/NET/edburns/&g
 <p>Ed has worked on a wide variety of client and server side web
 technologies since 1994, including NCSA Mosaic, Netscape 6, Mozilla, the
 Sun Java Plugin, Jakarta Tomcat and JavaServer Faces, and most recently,
-the Servlet specification.  Ed leads or co-leads the expert groups for
+the Servlet specification.  Ed has lead or co-leads\ the expert groups for
 Servlet and JavaServer Faces.  Ed has published four books with
 McGraw-Hill, JavaServerFaces: The Complete Reference (2006), Secrets of
 the Rockstar Programmers: Riding the IT crest (2008) JavaServer Faces
