--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -41,6 +41,13 @@ including NCSA Mosaic, Mozilla, the Sun Java Plugin, Jakarta Tomcat, the
 Cosmo Create HTML authoring tool, and the web transport layer in the
 Irix operating system from Silicon Graphics.</p>
 
+<p>Ed has published four books with
+  McGraw-Hill: JavaServerFaces: The Complete Reference (2006), Secrets of
+  the Rockstar Programmers: Riding the IT crest (2008) JavaServer Faces
+  2.0: The Complete Reference (2010) and Hudson Continuous Integration In
+  Practice (2013).  To learn more about his books or projects, you can
+  visit his website at &lt;http://ridingthecrest.com/&gt;.</p>
+
 <p>Ed has a Bachelor of Computer Science degree from the University of
 Illinois at Urbana-Champaign. While at UIUC, Ed took a minor in Germanic
 Studies and worked for IBM in the co-op program, where he first acquired
@@ -67,9 +74,9 @@ href="http://purl.oclc.org/NET/edburns/">&lt;http://purl.oclc.org/NET/edburns/&g
 <p>Ed has worked on a wide variety of client and server side web
 technologies since 1994, including NCSA Mosaic, Netscape 6, Mozilla, the
 Sun Java Plugin, Jakarta Tomcat and JavaServer Faces, and most recently,
-the Servlet specification.  Ed has lead or co-leads\ the expert groups for
+the Servlet specification.  Ed has lead or co-lead the expert groups for
 Servlet and JavaServer Faces.  Ed has published four books with
-McGraw-Hill, JavaServerFaces: The Complete Reference (2006), Secrets of
+McGraw-Hill: JavaServerFaces: The Complete Reference (2006), Secrets of
 the Rockstar Programmers: Riding the IT crest (2008) JavaServer Faces
 2.0: The Complete Reference (2010) and Hudson Continuous Integration In
 Practice (2013).  To learn more about his books or projects, you can
