--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -84,25 +84,27 @@ visit his website at &lt;http://ridingthecrest.com/&gt;.</p>
 
 <h2>Short Version with Conference Experience</h2>
 
-<p>Ed Burns is a Consulting Member of the Technical Staff at Oracle
-America, Inc. and has worked on a wide variety of client and server side
-web technologies since 1994, including NCSA Mosaic, Mozilla, the Sun
-Java Plugin, Jakarta Tomcat and, most extensively, JavaServer Faces, on
-which he is the co-spec lead.  Ed is also the co-spec lead for the
-Servlet specification.  Ed is an experienced international conference
-speaker, with consistently high attendence numbers and ratings at
-JavaOne (Rockstar award winner 2016), Devoxx, DevNexus, JAOO, JAX,
-W-JAX, No Fluff Just Stuff, JA-SIG, The Ajax Experience, and Java and
-Linux User Groups.  He has published four books with McGraw-Hill,
-JavaServerFaces: The Complete Reference (2006), Secrets of the Rockstar
-Programmers: Riding the IT crest (2008) JavaServer Faces 2.0: The
-Complete Reference (2010) and Hudson Continuous Integration In Practice
-(2013).</p>
+<p>Ed Burns is currently Principal Architect on the Java Tooling and
+Experiences team at Microsoft. In this role, Ed will help make Azure the
+best place for Enterprise Java.  Prior to joining Microsoft, Ed was a
+Consulting Member of the Technical Staff At Oracle.  Ed has worked on a
+wide variety of client and server side web technologies since 1994,
+including NCSA Mosaic, Mozilla, the Sun Java Plugin, Jakarta Tomcat and,
+most extensively, JavaServer Faces, on which he is the co-spec lead.  Ed
+is also the co-spec lead for the Servlet specification.  Ed is an
+experienced international conference speaker, with consistently high
+attendance numbers and ratings at JavaOne (Rockstar award winner 2016),
+Devoxx, DevNexus, JAOO, JAX, W-JAX, No Fluff Just Stuff, JA-SIG, The
+Ajax Experience, and Java and Linux User Groups.  He has published four
+books with McGraw-Hill, JavaServerFaces: The Complete Reference (2006),
+Secrets of the Rockstar Programmers: Riding the IT crest (2008)
+JavaServer Faces 2.0: The Complete Reference (2010) and Hudson
+Continuous Integration In Practice (2013).</p>
 
     <hr>
 <!-- Created: Fri Jun 23 11:25:29 Eastern Daylight Time 2006 -->
 <!-- hhmts start -->
-Last modified: Tue Jun 04 18:09:46 EDT 2019
+Last modified: Thu Jun 27 18:09:46 EDT 2019
 <!-- hhmts end -->
   
 
