On branch master Left Oracle at Principal modified:   edburns/resume/bio.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -26,7 +26,7 @@ type=text/css></LINK>
 <h2>Long Version</h2>
 
 <p>Ed Burns is currently Principal Architect on the Java Tooling and Experiences team at
-Microsoft. In this role, Ed will help make Azure the best place for Enterprise Java.  Prior to joining Microsoft, Ed was a Consulting Member of the Technical Staff At Oracle.
+Microsoft. In this role, Ed will help make Azure the best place for Enterprise Java.  Prior to joining Microsoft, Ed was a Principal Member of the Technical Staff At Oracle.
 While there, Ed was the specification lead or co-lead for
 JavaServer Faces, the standard Web Application Framework for Java EE, and for Servlet, the standard HTTP API for Java EE.
 Ed continued in these roles from his work at Sun Microsystems, Inc.  In
@@ -87,7 +87,7 @@ visit his website at &lt;http://ridingthecrest.com/&gt;.</p>
 <p>Ed Burns is currently Principal Architect on the Java Tooling and
 Experiences team at Microsoft. In this role, Ed will help make Azure the
 best place for Enterprise Java.  Prior to joining Microsoft, Ed was a
-Consulting Member of the Technical Staff At Oracle.  Ed has worked on a
+Principal Member of the Technical Staff At Oracle.  Ed has worked on a
 wide variety of client and server side web technologies since 1994,
 including NCSA Mosaic, Mozilla, the Sun Java Plugin, Jakarta Tomcat and,
 most extensively, JavaServer Faces, on which he is the co-spec lead.  Ed
