On branch master Added "keynote" to speaker. modified:   edburns/resume/bio.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -54,7 +54,7 @@ Studies and worked for IBM in the co-op program, where he first acquired
 a fondness for computer history by working on System 370 Office
 Software.</p>
 
-<p>Ed is a frequent speaker at international industry conferences,
+<p>Ed is a frequent keynote speaker at international industry conferences,
 having presented many times at Oracle's JavaOneSM conference, given
 keynote addresses at Javaland, the JAX conference in Mainz, the W-JAX conference
 in Munich, Germany and the Globalcode Developer's Conference in S&atilde;o
