On branch master Add Kurzform bio modified:   edburns/resume/bio.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -80,7 +80,11 @@ McGraw-Hill: JavaServerFaces: The Complete Reference (2006), Secrets of
 the Rockstar Programmers: Riding the IT crest (2008) JavaServer Faces
 2.0: The Complete Reference (2010) and Hudson Continuous Integration In
 Practice (2013).  To learn more about his books or projects, you can
-visit his website at &lt;http://ridingthecrest.com/&gt;.</p>
+    visit his website at &lt;https://ridingthecrest.com/&gt;.</p>
+
+<h2>Kurzform</h2>
+
+<p>Seit 1994 hat Ed mit viel verschiedene Client und Server side Technologie inklusive NCSA Mosaic, Netscape 6, Mozilla, Sun Java Plug-in, Jakarta Tomcat, JavaServer Faces, und Servlet gearbeitet.  Ed hat JCP Experte gruppen für JavaServer Faces und Servlet geführt. Ed hat vier Bücher mit McGraw-Hill herausgebracht. Die Bücher heißt The Complete Reference (2006), Secrets of the Rockstar Programmers: Riding the IT crest (2008) JavaServer Faces 2.0: The Complete Reference (2010) und Hudson Continuous Integration In Practice (2013). Um mehr zu lesen, bitte guck sein Homepage &lt;https://ridingthecrest.com/&gt; an.</p>
 
 <h2>Short Version with Conference Experience</h2>
 
