--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -71,16 +71,19 @@ href="http://purl.oclc.org/NET/edburns/">&lt;http://purl.oclc.org/NET/edburns/&g
 
 <h2>Short Version</h2>
 
-<p>Ed has worked on a wide variety of client and server side web
-technologies since 1994, including NCSA Mosaic, Netscape 6, Mozilla, the
-Sun Java Plugin, Jakarta Tomcat and JavaServer Faces, and most recently,
-the Servlet specification.  Ed has lead or co-lead the expert groups for
-Servlet and JavaServer Faces.  Ed has published four books with
-McGraw-Hill: JavaServerFaces: The Complete Reference (2006), Secrets of
-the Rockstar Programmers: Riding the IT crest (2008) JavaServer Faces
-2.0: The Complete Reference (2010) and Hudson Continuous Integration In
-Practice (2013).  To learn more about his books or projects, you can
-    visit his website at &lt;https://ridingthecrest.com/&gt;.</p>
+<p>Ed Burns is currently Principal Architect on the Java Tooling and
+Experiences team at Microsoft. In this role, Ed will help make Azure
+the best place for Enterprise Java. Ed has worked on a wide variety of
+client and server side web technologies since 1994, including NCSA
+Mosaic, Netscape 6, Mozilla, the Sun Java Plugin, Jakarta Tomcat and
+JavaServer Faces, and the Servlet specification.  Ed has lead or
+co-lead the expert groups for Servlet and JavaServer Faces.  Ed has
+published four books with McGraw-Hill: JavaServerFaces: The Complete
+Reference (2006), Secrets of the Rockstar Programmers: Riding the IT
+crest (2008) JavaServer Faces 2.0: The Complete Reference (2010) and
+Hudson Continuous Integration In Practice (2013).  To learn more about
+his books or projects, you can visit his website at
+&lt;https://ridingthecrest.com/&gt;.</p>
 
 <h2>Kurzform</h2>
 
