On branch master Added Amazon author page. modified:   edburns/resume/bio.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/resume/bio.html
+++ b/edburns/resume/bio.html
@@ -46,7 +46,7 @@ Irix operating system from Silicon Graphics.</p>
   the Rockstar Programmers: Riding the IT crest (2008) JavaServer Faces
   2.0: The Complete Reference (2010) and Hudson Continuous Integration In
   Practice (2013).  To learn more about his books or projects, you can
-  visit his website at &lt;http://ridingthecrest.com/&gt;.</p>
+  visit his website at &lt;http://ridingthecrest.com/&gt; or <a href="https://www.amazon.com/author/edburns">Amazon Author Page</a>.</p>
 
 <p>Ed has a Bachelor of Computer Science degree from the University of
 Illinois at Urbana-Champaign. While at UIUC, Ed took a minor in Germanic
